apps/snoopy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snoopy
  labels:
    app: snoopy
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: snoopy
  type: ClusterIP
