apps/snoopy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snoopy
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: snoopy.sentimentalk.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snoopy
                port:
                  number: 80
  tls:
    - hosts:
        - snoopy.sentimentalk.com
      secretName: snoopy-tls
